modified:   Components/Layout/Web/Footer.razor 	modified:   Components/Pages/Web/Home.razor

--- a/Components/Layout/Web/Footer.razor
+++ b/Components/Layout/Web/Footer.razor
@@ -1,6 +1,6 @@
 <footer class="bg-dark text-white py-4">
     <div class="container text-center">
-        <p class="mb-0">&copy; 2025 ClinicCare Health Center. All rights reserved.</p>
+        <p class="mb-0">&copy; 2025 BYU-ClinicCare Health Center. All rights reserved.</p>
         <p class="small mt-1">
             123 Health Ave, Medical City |
             <i class="fas fa-phone-alt"></i> (555) 000-0000
