--- a/Components/Layout/Admin/Footer.razor
+++ b/Components/Layout/Admin/Footer.razor
@@ -1,7 +1,7 @@
  <footer class="bg-white border-top py-3 mt-auto">
             <div class="container-fluid">
                 <div class="text-center text-muted">
-                    &copy; 2025 ClinicCare Queue & Appointments System. All rights reserved.
+                    &copy; 2025 BYU-ClinicCare Queue & Appointments System. All rights reserved.
                 </div>
             </div>
         </footer>
