--- a/Components/Layout/Web/WebLayout.razor
+++ b/Components/Layout/Web/WebLayout.razor
@@ -69,7 +69,7 @@
         <div class="row align-items-center">
             <div class="col-lg-7">
                 <h1 class="display-4 fw-bold text-cc-primary">Quality Care, Simplified Appointments.</h1>
-                <p class="lead my-4">Your health is our priority. ClinicCare provides expert medical services with an easy-to-use online appointment and queue system.</p>
+                <p class="lead my-4">Your health is our priority. BYU-ClinicCare provides expert medical services with an easy-to-use online appointment and queue system.</p>
                 <a href="#" class="btn btn-cc-primary btn-lg me-3"><i class="far fa-calendar-check me-2"></i> Find an Appointment</a>
                 <a href="#" class="btn btn-outline-dark btn-lg">Learn More</a>
             </div>
