--- a/Components/Layout/Web/WebLayout.razor
+++ b/Components/Layout/Web/WebLayout.razor
@@ -105,7 +105,7 @@
 
 <footer class="bg-dark text-white py-4">
     <div class="container text-center">
-        <p class="mb-0">&copy; 2025 ClinicCare Health Center. All rights reserved.</p>
+        <p class="mb-0">&copy; 2025 BYU-ClinicCare Health Center. All rights reserved.</p>
         <p class="small mt-1">123 Health Ave, Medical City | <i class="fas fa-phone-alt"></i> (555) 000-0000</p>
         <a href="login.html" class="text-white-50 small">Staff Login</a>
     </div>
