--- a/Components/Layout/Web/Footer.razor
+++ b/Components/Layout/Web/Footer.razor
@@ -5,6 +5,6 @@
             123 Health Ave, Medical City |
             <i class="fas fa-phone-alt"></i> (555) 000-0000
         </p>
-        <a href="login.html" class="text-white-50 small">Staff Login</a>
+        <NavLink  href="login" class="text-white-50 small">Staff Login</NavLink>
     </div>
 </footer>
