--- a/Components/Layout/Web/Header.razor
+++ b/Components/Layout/Web/Header.razor
@@ -1,21 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-cc sticky-top">
-    <div class="container">
-        <a class="navbar-brand cc-logo" href="#">
-            <i class="fas fa-heartbeat text-cc-primary me-2"></i> BYU-ClinicCare
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="#doctors">Our Doctors</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                <li class="nav-item ms-lg-3">
-                    <a class="btn btn-outline-success" href="#"><i class="far fa-calendar-alt me-1"></i> Book Online</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ClinicCare Health Center - Quality Healthcare</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="css/site.css" >
+</head>
