--- a/Components/Layout/Web/WebLogin.razor
+++ b/Components/Layout/Web/WebLogin.razor
@@ -6,12 +6,16 @@
 <Header />
 <body>
 
-<Navigate  />
+<main>
 
+<section class="py-5">
+    <div class="container">
        @Body
 
-<Footer /> 
+     </div>  
+</section>
 
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
