modified:   Components/Layout/Web/Navigate.razor 	modified:   Components/Pages/Web/Bookonline.razor

--- a/Components/Layout/Web/Navigate.razor
+++ b/Components/Layout/Web/Navigate.razor
@@ -8,11 +8,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="#doctors">Our Doctors</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                <li class="nav-item"><NavLink class="nav-link" href="/services">Services</NavLink></li>
+                <li class="nav-item"><NavLink class="nav-link" href="/doctors">Our Doctors</NavLink></li>
+                <li class="nav-item"><NavLink class="nav-link" href="/contact">Contact</NavLink></li>
                 <li class="nav-item ms-lg-3">
-                    <a class="btn btn-outline-success" href="#"><i class="far fa-calendar-alt me-1"></i> Book Online</a>
+                <NavLink class="btn btn-outline-success" href="/bookonline"><i class="far fa-calendar-alt me-1"></i> Book Online</NavLink>
                 </li>
             </ul>
         </div>
