modified:   bin/Debug/net9.0/BYUClinicCareApp.dll 	modified:   bin/Debug/net9.0/BYUClinicCareApp.exe 	modified:   bin/Debug/net9.0/BYUClinicCareApp.pdb 	modified:   bin/Debug/net9.0/BYUClinicCareApp.staticwebassets.endpoints.json 	modified:   bin/Debug/net9.0/BYUClinicCareApp.staticwebassets.runtime.json 	modified:   obj/Debug/net9.0/BYUClinicCareApp.AssemblyInfo.cs 	modified:   obj/Debug/net9.0/BYUClinicCareApp.AssemblyInfoInputs.cache 	modified:   obj/Debug/net9.0/BYUClinicCareApp.csproj.FileListAbsolute.txt 	modified:   obj/Debug/net9.0/BYUClinicCareApp.dll 	modified:   obj/Debug/net9.0/BYUClinicCareApp.pdb 	modified:   obj/Debug/net9.0/BYUClinicCareApp.sourcelink.json 	modified:   obj/Debug/net9.0/apphost.exe 	new file:   obj/Debug/net9.0/compressed/6nr1201vv5-li7z8wjy5q.gz 	deleted:    obj/Debug/net9.0/compressed/6nr1201vv5-mm17sv18jh.gz 	modified:   obj/Debug/net9.0/rbcswa.dswa.cache.json 	modified:   obj/Debug/net9.0/ref/BYUClinicCareApp.dll 	modified:   obj/Debug/net9.0/refint/BYUClinicCareApp.dll 	modified:   obj/Debug/net9.0/rjimswa.dswa.cache.json 	modified:   obj/Debug/net9.0/rjsmcshtml.dswa.cache.json 	modified:   obj/Debug/net9.0/rjsmrazor.dswa.cache.json 	modified:   obj/Debug/net9.0/rpswa.dswa.cache.json 	modified:   obj/Debug/net9.0/staticwebassets.build.endpoints.json 	modified:   obj/Debug/net9.0/staticwebassets.build.json 	modified:   obj/Debug/net9.0/staticwebassets.build.json.cache 	modified:   obj/Debug/net9.0/staticwebassets.development.json 	modified:   wwwroot/css/site.css

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -27,3 +27,7 @@
     border-color: #1a648f;
 }
 
+ .hero-title {
+            background-color: var(--cc-light-blue);
+            padding: 60px 0;
+        }
