modified:   Components/Layout/Web/Navigate.razor 	modified:   Components/Pages/Web/Contact.razor 	modified:   Components/Pages/Web/Doctorspublic.razor 	new file:   Components/Pages/Web/Findappointment.razor 	modified:   Components/Pages/Web/Home.razor 	modified:   Components/Pages/Web/Learnmore.razor 	modified:   bin/Debug/net9.0/BYUClinicCareApp.dll 	modified:   bin/Debug/net9.0/BYUClinicCareApp.exe 	modified:   bin/Debug/net9.0/BYUClinicCareApp.pdb 	modified:   obj/Debug/net9.0/BYUClinicCareApp.AssemblyInfo.cs 	modified:   obj/Debug/net9.0/BYUClinicCareApp.AssemblyInfoInputs.cache 	modified:   obj/Debug/net9.0/BYUClinicCareApp.GeneratedMSBuildEditorConfig.editorconfig 	modified:   obj/Debug/net9.0/BYUClinicCareApp.dll 	modified:   obj/Debug/net9.0/BYUClinicCareApp.pdb 	modified:   obj/Debug/net9.0/BYUClinicCareApp.sourcelink.json 	modified:   obj/Debug/net9.0/apphost.exe 	modified:   obj/Debug/net9.0/ref/BYUClinicCareApp.dll 	modified:   obj/Debug/net9.0/refint/BYUClinicCareApp.dll 	modified:   obj/Debug/net9.0/rjsmcshtml.dswa.cache.json 	modified:   obj/Debug/net9.0/rjsmrazor.dswa.cache.json 	modified:   obj/Debug/net9.0/rpswa.dswa.cache.json

--- a/Components/Pages/Web/Home.razor
+++ b/Components/Pages/Web/Home.razor
@@ -8,8 +8,8 @@
             <div class="col-lg-7">
                 <h1 class="display-4 fw-bold text-cc-primary">Quality Care, Simplified Appointments.</h1>
                 <p class="lead my-4">Your health is our priority. BYU-ClinicCare provides expert medical services with an easy-to-use online appointment and queue system.</p>
-                <a href="#" class="btn btn-cc-primary btn-lg me-3"><i class="far fa-calendar-check me-2"></i> Find an Appointment</a>
-                <a href="#" class="btn btn-outline-dark btn-lg">Learn More</a>
+                <NavLink href="/findappointment" class="btn btn-cc-primary btn-lg me-3"><i class="far fa-calendar-check me-2"></i> Find an Appointment</NavLink>
+                <NavLink href="/learnmore" class="btn btn-outline-dark btn-lg">Learn More</NavLink>
             </div>
             <div class="col-lg-5 text-center mt-4 mt-lg-0">
                 
