--- a/Components/Layout/Web/Navigate.razor
+++ b/Components/Layout/Web/Navigate.razor
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><NavLink class="nav-link" href="/services">Services</NavLink></li>
-                <li class="nav-item"><NavLink class="nav-link" href="/doctors">Our Doctors</NavLink></li>
+                <li class="nav-item"><NavLink class="nav-link" href="/doctorspublic">Our Doctors</NavLink></li>
                 <li class="nav-item"><NavLink class="nav-link" href="/contact">Contact</NavLink></li>
                 <li class="nav-item ms-lg-3">
                 <NavLink class="btn btn-outline-success" href="/bookonline"><i class="far fa-calendar-alt me-1"></i> Book Online</NavLink>
