--- a/Components/Layout/Admin/Sidebar.razor
+++ b/Components/Layout/Admin/Sidebar.razor
@@ -1,26 +1,26 @@
 <div class="border-end bg-white" id="sidebar-wrapper">
         <div class="sidebar-heading">BYU-ClinicCare</div>
         <div class="list-group list-group-flush p-2">
-             <NavLink href="index.html" class="list-group-item list-group-item-action active-link py-3 rounded mb-2" aria-current="page">
+             <NavLink href="/admin/dashbaord" class="list-group-item list-group-item-action active-link py-3 rounded mb-2" aria-current="page">
                 <i class="fas fa-fw fa-tachometer-alt"></i> Dashboard
             </NavLink>
-             <NavLink href="queue.html" class="list-group-item list-group-item-action py-3 rounded mb-2">
+             <NavLink href="/admin/queue" class="list-group-item list-group-item-action py-3 rounded mb-2">
                 <i class="fas fa-fw fa-users-line"></i> Queue Management
            </NavLink>
-             <NavLink href="appointments.html" class="list-group-item list-group-item-action py-3 rounded mb-2">
+             <NavLink href="/admin/appointments" class="list-group-item list-group-item-action py-3 rounded mb-2">
                 <i class="far fa-fw fa-calendar-check"></i> Appointments
            </NavLink>
-            <NavLink  href="patients.html" class="list-group-item list-group-item-action py-3 rounded mb-2">
+            <NavLink  href="/admin/patients" class="list-group-item list-group-item-action py-3 rounded mb-2">
                 <i class="fas fa-fw fa-user-injured"></i> Patients
             </NavLink>
-             <NavLink href="doctors-public.html" class="list-group-item list-group-item-action py-3 rounded mb-2">
+             <NavLink href="/admin/doctors" class="list-group-item list-group-item-action py-3 rounded mb-2">
                 <i class="fas fa-fw fa-user-md"></i> Doctors
             </NavLink>
-             <NavLink href="reports.html" class="list-group-item list-group-item-action py-3 rounded mb-2">
+             <NavLink href="/admin/reports" class="list-group-item list-group-item-action py-3 rounded mb-2">
                 <i class="fas fa-fw fa-chart-line"></i> Reports
             </NavLink>
             <hr class="my-2">
-             <NavLink href="settings.html" class="list-group-item list-group-item-action py-3 rounded mb-2">
+             <NavLink href="/admin/settings" class="list-group-item list-group-item-action py-3 rounded mb-2">
                 <i class="fas fa-fw fa-cogs"></i> Settings
             </NavLink>
             <NavLink href="#" class="list-group-item list-group-item-action py-3 rounded mb-2 text-danger">
