modified:   Components/Layout/Admin/AdminLayout.razor 	deleted:    Components/Pages/Admin/Dashboard copy.razor 	modified:   Components/Pages/Admin/Dashboard.razor 	new file:   Components/Pages/Admin/Queue.razor 	modified:   bin/Debug/net9.0/BYUClinicCareApp.dll 	modified:   bin/Debug/net9.0/BYUClinicCareApp.exe 	modified:   bin/Debug/net9.0/BYUClinicCareApp.pdb 	modified:   obj/Debug/net9.0/BYUClinicCareApp.AssemblyInfo.cs 	modified:   obj/Debug/net9.0/BYUClinicCareApp.AssemblyInfoInputs.cache 	modified:   obj/Debug/net9.0/BYUClinicCareApp.GeneratedMSBuildEditorConfig.editorconfig 	modified:   obj/Debug/net9.0/BYUClinicCareApp.dll 	modified:   obj/Debug/net9.0/BYUClinicCareApp.pdb 	modified:   obj/Debug/net9.0/BYUClinicCareApp.sourcelink.json 	modified:   obj/Debug/net9.0/apphost.exe 	modified:   obj/Debug/net9.0/ref/BYUClinicCareApp.dll 	modified:   obj/Debug/net9.0/refint/BYUClinicCareApp.dll 	modified:   obj/Debug/net9.0/rjsmcshtml.dswa.cache.json 	modified:   obj/Debug/net9.0/rjsmrazor.dswa.cache.json 	modified:   obj/Debug/net9.0/rpswa.dswa.cache.json

--- a/Components/Pages/Admin/Dashboard.razor
+++ b/Components/Pages/Admin/Dashboard.razor
@@ -1,6 +1,6 @@
 @page "/admin/dashboard"
 @layout BYUClinicCareApp.Components.Layout.Admin.AdminLayout
-
+<div class="container-fluid py-4">
  <h2 class="mb-4" data-aos="fade-right">Welcome back, Dr. Smith!</h2>
             
             <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -125,3 +125,4 @@
                 </div>
 
             </div> 
+</div>
