modified:   Components/Pages/Web/services.razor

--- a/Components/Pages/Web/services.razor
+++ b/Components/Pages/Web/services.razor
@@ -6,7 +6,7 @@
     <section class="hero-title">
     <div class="container">
         <h1 class="text-cc-primary fw-bold">Our Comprehensive Health Services</h1>
-        <p class="lead">We are committed to providing expert care across multiple medical disciplines.</p>
+        <p class="lead">We are committed to providing experts care across multiple medical disciplines.</p>
     </div>
 </section>
 
