modified:   Components/Layout/Admin/Sidebar.razor

--- a/Components/Layout/Admin/Sidebar.razor
+++ b/Components/Layout/Admin/Sidebar.razor
@@ -1,7 +1,7 @@
 <div class="border-end bg-white" id="sidebar-wrapper">
         <div class="sidebar-heading">BYU-ClinicCare</div>
         <div class="list-group list-group-flush p-2">
-             <NavLink href="/admin/dashbaord" class="list-group-item list-group-item-action active-link py-3 rounded mb-2" aria-current="page">
+             <NavLink href="/admin/dashboard" class="list-group-item list-group-item-action active-link py-3 rounded mb-2" aria-current="page">
                 <i class="fas fa-fw fa-tachometer-alt"></i> Dashboard
             </NavLink>
              <NavLink href="/admin/queue" class="list-group-item list-group-item-action py-3 rounded mb-2">
