new file:   Components/Pages/Admin/Consultation.razor 	new file:   Components/Pages/Admin/Patients.razor 	modified:   Components/Pages/Admin/Queue.razor 	deleted:    Components/Pages/Web/Consultation.razor 	modified:   obj/Debug/net9.0/BYUClinicCareApp.AssemblyInfo.cs 	modified:   obj/Debug/net9.0/BYUClinicCareApp.AssemblyInfoInputs.cache 	modified:   obj/Debug/net9.0/BYUClinicCareApp.GeneratedMSBuildEditorConfig.editorconfig

--- a/Components/Pages/Admin/Queue.razor
+++ b/Components/Pages/Admin/Queue.razor
@@ -36,7 +36,7 @@
                             <td>8:55 AM</td>
                             <td>Dr. Alice</td>
                             <td><span class="badge bg-success p-2 rounded-pill"><i class="fas fa-user-check me-1"></i> Consulting</span></td>
-                            <td><a href="consultation.html" class="btn btn-sm btn-outline-success">Go to Consultation</a></td>
+                            <td><NavLink href="/admin/consultation" class="btn btn-sm btn-outline-success">Go to Consultation</NavLink></td>
                         </tr>
                         <tr>
                             <td>A03</td>
