--- a/Components/Pages/Admin/Dashboard.razor
+++ b/Components/Pages/Admin/Dashboard.razor
@@ -117,9 +117,9 @@
                             <h6 class="m-0 font-weight-bold text-cc-primary">Quick Actions</h6>
                         </div>
                         <div class="card-body">
-                            <a href="appointments.html" class="btn btn-outline-success btn-lg w-100 mb-3"><i class="far fa-calendar-plus me-2"></i> Book New Appointment</a>
-                            <a href="queue.html" class="btn btn-outline-warning btn-lg w-100 mb-3"><i class="fas fa-users-line me-2"></i> View Live Queue</a>
-                            <a href="#" class="btn btn-outline-info btn-lg w-100"><i class="fas fa-user-plus me-2"></i> Register New Patient</a>
+                            <NavLink href="/admin/appointments" class="btn btn-outline-success btn-lg w-100 mb-3"><i class="far fa-calendar-plus me-2"></i> Book New Appointment</NavLink>
+                            <NavLink href="/admin/queue" class="btn btn-outline-warning btn-lg w-100 mb-3"><i class="fas fa-users-line me-2"></i> View Live Queue</NavLink>
+                            <NavLink href="/admin/register" class="btn btn-outline-info btn-lg w-100"><i class="fas fa-user-plus me-2"></i> Register New Patient</NavLink>
                         </div>
                     </div>
                 </div>
