--- a/Components/Layout/Web/WebLogin.razor
+++ b/Components/Layout/Web/WebLogin.razor
@@ -3,19 +3,18 @@
 
 <!doctype html>
 <html lang="en">
-<Header />
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ClinicCare | Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="css/login.css" >
+</head>
 <body>
 
-<main>
+@Body
 
-<section class="py-5">
-    <div class="container">
-       @Body
-
-     </div>  
-</section>
-
-</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
