--- a/Components/Pages/Admin/Dashboard.razor
+++ b/Components/Pages/Admin/Dashboard.razor
@@ -119,7 +119,7 @@
                         <div class="card-body">
                             <NavLink href="/admin/appointments" class="btn btn-outline-success btn-lg w-100 mb-3"><i class="far fa-calendar-plus me-2"></i> Book New Appointment</NavLink>
                             <NavLink href="/admin/queue" class="btn btn-outline-warning btn-lg w-100 mb-3"><i class="fas fa-users-line me-2"></i> View Live Queue</NavLink>
-                            <NavLink href="/admin/register" class="btn btn-outline-info btn-lg w-100"><i class="fas fa-user-plus me-2"></i> Register New Patient</NavLink>
+                            <NavLink href="/admin/registerpatient" class="btn btn-outline-info btn-lg w-100"><i class="fas fa-user-plus me-2"></i> Register New Patient</NavLink>
                         </div>
                     </div>
                 </div>
