--- a/Components/Layout/Admin/Header.razor
+++ b/Components/Layout/Admin/Header.razor
@@ -11,7 +11,7 @@
             </button>
             <div class="dropdown">
                 <a class="nav-link dropdown-toggle text-dark" href="#" id="userMenu" data-bs-toggle="dropdown">
-                    <img src="https://via.placeholder.com/30/1e74a6/ffffff?text=D" class="rounded-circle me-1" />
+                    <img width="5px" height="5px" src="/image/doctor.png" class="rounded-circle me-1" />
                     <span>Dr. Smith</span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
